Add styles to the webpages

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles2.css" rel="stylesheet" type="text/css">
     <title>Web page #1</title>
   </head>
   <body>
@@ -24,6 +25,6 @@
 
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
 
-  
+
   </body>
 </html>
